mudando as cores

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding:0px;
 }
 .cabecalho{
-    background-color: #3c371f;
+    background-color: #FFF2CC;
     color:black;
     display: flex;
 }
