--- a/style.css
+++ b/style.css
@@ -2,17 +2,21 @@
     margin:0px;
     padding:0px;
 }
+
 .cabecalho{
     background-color: #FFF2CC;
-    color:black;
-    display: flex;
+    color: black;
+    display: flex;   
+    font-size:24px;
+    justify-content: space-around;
 }
 
-.imagem-logo{
+.logo{
     width:321px;
     height: 157px;
 }
 
 .lista{
-    color:blue;
+    color:red;
 }
+
