--- a/style.css
+++ b/style.css
@@ -9,42 +9,64 @@
     display: flex;   
     font-size:24px;
     justify-content: space-around;
+    padding-top: 30px;
 }
 
 .logo{
     width:321px;
     height: 157px;
-}
-
-.titulo{
-    font-size: 50px;
+    
 }
 
 .lista{
-    color:blue;
     display: inline-block;
-}
-
-.item{
-    font-size: 20px;
+    list-style-type: none;
+    
 }
 
 .amarela{
-    background-color:#FFD966;
-    padding:150px 100px;
-    text-align: center;
+    background-color: #FFD966;
+    padding: 150px 100px;
+    display:flex;
 }
 
 .tituloamarelo{
-    font-size: 40px;
+    font-size: 50px;
+}
+
+.paragrafos{
+    display: inline-block;
+    font-size:30px;
 }
 
 .imagemamarelo{
-    width: 400px;
-    height: 200px;
+    width: 350px;
+    height: 250px;
 }
 
-.textoamarelo{
-    font-size: 30px;
-    
+.cursistas{
+    text-align: center;
+    background-color: #FFF2CC;
+}
+
+.foto{
+    width: 120px;
+}
+
+.todososcursistas{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+}
+
+body{
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+footer{
+    background-color: #FFD966;
+    display: flex;
+}
+
+.icone{
+    width: 50px;
 }
